--- a/阿吒婆拘經咒語發音考究：依《梵語台語發音表》校訂完整版.html
+++ b/阿吒婆拘經咒語發音考究：依《梵語台語發音表》校訂完整版.html
@@ -164,7 +164,7 @@
                             <tr>
                                 <td class="hanzi-font">豆留咩 豆留咩</td>
                                 <td class="poj-font">Tāu-liû-me (x2)</td>
-                                <td class="sanskrit-font">DURUMI DURUMI</td>
+                                <td class="sanskrit-font">DURUME DURUME</td>
                                 <td class="iast-font">durume</td>
                                 <td class="meaning-font">樹神/堅固 (Druma)</td>
                                 <td>
@@ -175,26 +175,19 @@
                              <tr>
                                 <td class="hanzi-font">陀咩 陀咩</td>
                                 <td class="poj-font">Tô-me (x2)</td>
-                                <td class="sanskrit-font">TAMI TAMI</td>
-                                <td class="iast-font">tame</td>
+                                <td class="sanskrit-font">DAME DAME</td>
+                                <td class="iast-font">dame</td>
                                 <td class="meaning-font">調伏 (Dame)</td>
                                 <td>
                                      <span class="tag tag-rule">Rule: ta=怛</span><br>
-                                     陀 (Tô) 對應 Ta/Da。
+                                     <span class="tag tag-note">Da/Ta互通</span><br>
+                                     陀 (Tô) 為濁音 D，對應 Dame。符合古音習慣。
                                 </td>
                             </tr>
                             <tr>
                                 <td class="hanzi-font">豆留咩 豆留咩</td>
                                 <td class="poj-font">Tāu-liû-me (x2)</td>
-                                <td class="sanskrit-font">DURUMI DURUMI</td>
-                                <td class="iast-font">durume</td>
-                                <td class="meaning-font"></td>
-                                <td></td>
-                            </tr>
-                             <tr>
-                                <td class="hanzi-font">豆留咩 豆留咩</td>
-                                <td class="poj-font">Tāu-liû-me (x2)</td>
-                                <td class="sanskrit-font">DURUMI DURUMI</td>
+                                <td class="sanskrit-font">DURUME DURUME</td>
                                 <td class="iast-font">durume</td>
                                 <td class="meaning-font"></td>
                                 <td></td>
@@ -202,7 +195,7 @@
                             <tr>
                                 <td class="hanzi-font">豆留彌隷</td>
                                 <td class="poj-font">Tāu-liû-bî-lē</td>
-                                <td class="sanskrit-font">DURUMRILE</td>
+                                <td class="sanskrit-font">DURUMILE</td>
                                 <td class="iast-font">durumile</td>
                                 <td class="meaning-font"></td>
                                 <td>
@@ -217,7 +210,7 @@
                                 <td class="sanskrit-font">NIRI NIRI NIRI</td>
                                 <td class="iast-font">niri</td>
                                 <td class="meaning-font">離/無 (Nir)</td>
-                                <td><span class="tag tag-match">Rule: li=哩</span><br>利=Li/Ri。</td>
+                                <td><span class="tag tag-match">Rule: li=哩</span><br>利=Li/Ri，符合表中「哩」的對應。</td>
                             </tr>
                             <tr>
                                 <td class="hanzi-font">那羅 那羅 那羅</td>
@@ -228,7 +221,7 @@
                                 <td>
                                     <span class="tag tag-rule">Rule: da=那</span><br>
                                     <p class="rule-citation">引用：《梵語台語發音表》 "da ... 那"</p>
-                                    若依此表，<strong>那羅</strong> 亦可對應梵文 <strong>Dara</strong>。但在通用的佛教梵文中，此處多還原為 <strong>Nara</strong>。
+                                    若依此表，<strong>那羅</strong> 亦可對應梵文 <strong>Dara</strong>。但在通用的佛教梵文中，此處多還原為 <strong>Nara</strong>。此處顯示唐代翻譯「那」字可能兼具 Na 與 Da 的音值。
                                 </td>
                             </tr>
                              <tr>
@@ -241,17 +234,17 @@
                              <tr>
                                 <td class="hanzi-font">那羅 㝹富 尼利</td>
                                 <td class="poj-font">Nâ-lô Liû-pù Nî-lī</td>
-                                <td class="sanskrit-font">NARA-NIPU-NIRI</td>
-                                <td class="iast-font">nara nupu niri</td>
+                                <td class="sanskrit-font">NARA NUPU NIRI</td>
+                                <td class="iast-font">nara nṛpa niri</td>
                                 <td class="meaning-font">人王? (Nara-Nrpa)</td>
-                                <td></td>
+                                <td><span class="tag tag-note">Nupu = Nrpa</span></td>
                             </tr>
                              <tr>
                                 <td class="hanzi-font">豆留茶濘 豆留茶濘</td>
                                 <td class="poj-font">Tāu-liû-tê-lêng (x2)</td><td class="sanskrit-font">DURUCANE DURUCANE</td>
                                 <td class="iast-font">durucane</td>
                                 <td class="meaning-font">難行 (Dur-cara?)</td>
-                                <td><span class="tag tag-rule">Rule: ca=遮/cha=車</span><br>茶 (Tê) 在此對應 Ca?</td>
+                                <td><span class="tag tag-rule">Rule: ca=遮</span><br>茶 (Tê) 屬牙音/舌齒音，在此對應 Ca。</td>
                             </tr>
                              <tr>
                                 <td class="hanzi-font">摩訶 豆留茶濘</td>
@@ -272,7 +265,7 @@
                                 <td class="poj-font">Kiù-tshia-lêng (x2)</td><td class="sanskrit-font">JITANE JITANE</td>
                                 <td class="iast-font">jītane</td>
                                 <td class="meaning-font">勝利 (Jita)</td>
-                                <td><span class="tag tag-match">Rule: ta=怛</span><br>吒 (Tshia) 對應 Ta/Tta。</td>
+                                <td><span class="tag tag-match">Rule: ta=怛</span><br>吒 (Tshia) 對應 Ta/Tta，台語保留入聲特質。</td>
                             </tr>
                              <tr>
                                 <td class="hanzi-font">摩訶 究吒濘</td>
@@ -305,20 +298,20 @@
                              <tr>
                                 <td class="hanzi-font">吒吒 吒吒 吒吒 吒吒</td>
                                 <td class="poj-font">Tshia-tshia (x4)</td><td class="sanskrit-font">TATA TATA TATA TATA</td>
-                                <td class="iast-font">tata</td>
+                                <td class="iast-font">taṭa</td>
                                 <td class="meaning-font">(震動聲/擬聲)</td>
-                                <td></td>
+                                <td><span class="tag tag-match">Rule: ta=怛</span><br>吒=Ta/Tta。</td>
                             </tr>
                              <tr>
                                 <td class="hanzi-font">摩訶 吒吒</td><td class="poj-font">Mô-ho Tshia-tshia</td>
                                 <td class="sanskrit-font">MAHATATA</td>
-                                <td class="iast-font">mahā-tata</td>
+                                <td class="iast-font">mahā-taṭa</td>
                                 <td class="meaning-font">大震動</td>
                                 <td></td>
                             </tr>
                              <tr>
                                 <td class="hanzi-font">吒吒</td><td class="poj-font">Tshia-tshia</td><td class="sanskrit-font">TATA</td>
-                                <td class="iast-font">tata</td>
+                                <td class="iast-font">taṭa</td>
                                 <td class="meaning-font"></td>
                                 <td></td>
                             </tr>
@@ -330,7 +323,7 @@
                                 <td class="meaning-font">無畏 (Abhi/Avi)</td>
                                 <td>
                                     <span class="tag tag-rule">Rule: bhi=鼻 / v轉b</span><br>
-                                    表中 <code>bhi</code> 對應「鼻」(Pīⁿ)。且《差異比較表》指出「v音都轉成了b音」，解釋了 Avi -> Abhi。
+                                    表中 <code>bhi</code> 對應「鼻」(Pīⁿ)。且《差異比較表》指出「v音都轉成了b音」，解釋了 Avi -> Abhi。漢字「毘」讀音 Bi/Pi，符合規則。
                                 </td>
                             </tr>
                              <tr>
@@ -580,7 +573,7 @@
                                 <td class="hanzi-font">牟尼 牟尼</td><td class="poj-font">Mâu-nî (x2)</td><td class="sanskrit-font">MUNI MUNI</td>
                                 <td class="iast-font">muni</td>
                                 <td class="meaning-font">聖者 (Muni)</td>
-                                <td><span class="tag tag-rule">Rule: ma=摩, ni=額?</span></td>
+                                <td><span class="tag tag-rule">Rule: ma=摩</span></td>
                             </tr>
                              <tr>
                                 <td class="hanzi-font">牟尼 牟尼</td><td class="poj-font">Mâu-nî (x2)</td><td class="sanskrit-font">MUNI MUNI</td>
@@ -860,14 +853,14 @@
                                 <td class="meaning-font">大龍 (Maha Naga)</td>
                                 <td>
                                     <span class="tag tag-rule">Rule: da=那</span><br>
-                                    若依 <code>da=那</code> 規則，此處「那迦」除了是 <strong>Nāga</strong> (龍) 外，理論上也可能對應 <strong>Daga</strong>。但在佛教語境中，Nāga 機率最高。
+                                    若依 <code>da=那</code> 規則，此處「那迦」除了是 <strong>Nāga</strong> (龍) 外，理論上也可能對應 <strong>Daga</strong>。但在佛教語境中，Nāga 機率最高。但規則印證了唐音「那」的泛用性。
                                 </td>
                             </tr>
                              <tr>
                                 <td class="hanzi-font">休休</td><td class="poj-font">Hiu-hiu</td><td class="sanskrit-font">SHUSHU</td><td class="iast-font">śuśu</td><td class="meaning-font">嘶嘶聲</td><td></td>
                             </tr>
                             <tr>
-                                <td class="hanzi-font">鬥伽 那知</td><td class="poj-font">Tò͘-kê Nâ-ti</td><td class="sanskrit-font">DUGHANAYAJA</td><td class="iast-font">dughanāya</td><td class="meaning-font">惡? (Dugha?)</td><td><span class="tag tag-tang">Tò͘</span> 鬥=Du。</td></tr>
+                                <td class="hanzi-font">鬥伽 那知</td><td class="poj-font">Tò͘-kê Nâ-ti</td><td class="sanskrit-font">DUGHANAYAJA</td><td class="iast-font">dughanāya</td><td class="meaning-font">惡? (Dugha?)</td><td><span class="tag tag-note">Tò͘</span> 鬥=Du。</td></tr>
                             <tr><td class="hanzi-font">阿呼 阿伽 那知</td><td class="poj-font">A-ho͘ A-kê Nâ-ti</td><td class="sanskrit-font">AHUGHANAYAJA</td><td class="iast-font">ahughanāya</td><td class="meaning-font"></td><td></td></tr>
                             <tr><td class="hanzi-font">阿多 那知</td><td class="poj-font">A-to Nâ-ti</td><td class="sanskrit-font">ATANAYAJA</td><td class="iast-font">atanāya</td><td class="meaning-font"></td><td></td></tr>
                             <tr>
@@ -886,7 +879,7 @@
                             <tr><td class="hanzi-font">留豆 留豆 留豆</td><td class="poj-font">Liû-tāu (x3)</td><td class="sanskrit-font">DURU DURU DURU</td><td class="iast-font">duru</td><td class="meaning-font"></td><td></td></tr>
                             <tr><td class="hanzi-font">休休 豆留</td><td class="poj-font">Hiu-hiu Tāu-liû</td><td class="sanskrit-font">SHUSHUDURU</td><td class="iast-font">śuśu duru</td><td class="meaning-font"></td><td></td></tr>
                             <tr><td class="hanzi-font">唏泥 唏泥 唏泥 唏泥</td><td class="poj-font">Hi-nî (x4)</td><td class="sanskrit-font">SHIN SHIN SHIN SHIN</td><td class="iast-font">śini</td><td class="meaning-font"></td><td></td></tr>
-                            <tr><td class="hanzi-font">郁仇摩 仇摩</td><td class="poj-font">Ut-kiû-mô Kiû-mô</td><td class="sanskrit-font">U CUMA CUMA</td><td class="iast-font">u cūma</td><td class="meaning-font"></td><td><span class="tag tag-tang">Ut</span> 郁=U (入聲)。</td></tr>
+                            <tr><td class="hanzi-font">郁仇摩 仇摩</td><td class="poj-font">Ut-kiû-mô Kiû-mô</td><td class="sanskrit-font">U CUMA CUMA</td><td class="iast-font">u cūma</td><td class="meaning-font"></td><td><span class="tag tag-note">Ut</span> 郁=U (入聲)。</td></tr>
                             <tr><td class="hanzi-font">仇摩 仇摩</td><td class="poj-font">Kiû-mô (x2)</td><td class="sanskrit-font">CUMA CUMA</td><td class="iast-font">cūma</td><td class="meaning-font"></td><td></td></tr>
                             <tr><td class="hanzi-font">唏梨 唏梨 唏梨</td><td class="poj-font">Hi-lê (x3)</td><td class="sanskrit-font">SHIBHA SHIBHA</td><td class="iast-font">śibha</td><td class="meaning-font">吉祥</td><td></td></tr>
                             <tr><td class="hanzi-font">唏梨</td><td class="poj-font">Hi-lê</td><td class="sanskrit-font">SHIBHA</td><td class="iast-font">śibha</td><td class="meaning-font"></td><td></td></tr>
@@ -992,15 +985,15 @@
                             <tr><td class="hanzi-font">留牟 留牟 留牟 留牟</td><td class="poj-font">Liû-bô͘ (x4)</td><td class="sanskrit-font">DURU DURU DURU DURU</td><td class="iast-font">duru</td><td class="meaning-font"></td><td></td></tr>
                             <tr><td class="hanzi-font">留摩留摩 留摩留摩</td><td class="poj-font">Liû-mô (x4)</td><td class="sanskrit-font">DUMA DUMA DUMA DUMA</td><td class="iast-font">duma</td><td class="meaning-font">煙 (Dhuma?)</td><td></td></tr>
                             <tr><td class="hanzi-font">唏梨唏梨 唏梨唏梨 唏梨唏梨</td><td class="poj-font">Hi-lê (x6)</td><td class="sanskrit-font">SHIBHA SHIBHA SHIBHA SHIBHA SHIBHA SHIBHA</td><td class="iast-font">śibha</td><td class="meaning-font">吉祥</td><td></td></tr>
-                            <tr><td class="hanzi-font">仇那仇那 仇那 仇那 仇那</td><td class="poj-font">Kiû-nâ (x5)</td><td class="sanskrit-font">CUNA CUNA CUNA CUNA CUNA</td><td class="iast-font">cuna</td><td class="meaning-font">粉碎 (Curna)</td><td><span class="tag tag-tang">Kiû</span> 仇=Cu。</td></tr>
+                            <tr><td class="hanzi-font">仇那仇那 仇那 仇那 仇那</td><td class="poj-font">Kiû-nâ (x5)</td><td class="sanskrit-font">CUNA CUNA CUNA CUNA CUNA</td><td class="iast-font">cuna</td><td class="meaning-font">粉碎 (Curna)</td><td><span class="tag tag-note">Kiû</span> 仇=Cu。</td></tr>
                             <tr><td class="hanzi-font">仇㝹仇㝹 仇㝹 仇㝹</td><td class="poj-font">Kiû-liû (x4)</td><td class="sanskrit-font">CUNI CUNI CUNI CUNI</td><td class="iast-font">cuni</td><td class="meaning-font"></td><td></td></tr>
                             <tr><td class="hanzi-font">仇留仇留 仇留 仇留</td><td class="poj-font">Kiû-liû (x4)</td><td class="sanskrit-font">CUDU CUDU CUDU CUDU</td><td class="iast-font">cudu</td><td class="meaning-font">頂髻? (Cuda)</td><td></td></tr>
                             <tr><td class="hanzi-font">休婁 休婁 休婁 休婁</td><td class="poj-font">Hiu-lô͘ (x4)</td><td class="sanskrit-font">SURU SURU SURU SURU</td><td class="iast-font">śuru</td><td class="meaning-font"></td><td></td></tr>
-                            <tr><td class="hanzi-font">暮休 暮休 暮休暮休</td><td class="poj-font">Bō͘-hiu (x4)</td><td class="sanskrit-font">MUSHU MUSHU MUSHU MUSHU</td><td class="iast-font">mūśu</td><td class="meaning-font">偷竊 (Mus)</td><td><span class="tag tag-tang">Bō͘</span> 暮=Mu。</td></tr>
+                            <tr><td class="hanzi-font">暮休 暮休 暮休暮休</td><td class="poj-font">Bō͘-hiu (x4)</td><td class="sanskrit-font">MUSHU MUSHU MUSHU MUSHU</td><td class="iast-font">mūśu</td><td class="meaning-font">偷竊 (Mus)</td><td><span class="tag tag-note">Bō͘</span> 暮=Mu。</td></tr>
                             <tr><td class="hanzi-font">暮唏梨暮唏梨 暮唏梨暮唏梨</td><td class="poj-font">Bō͘-hi-lê (x4)</td><td class="sanskrit-font">MU SHIBHA (x4)</td><td class="iast-font">mu śibha</td><td class="meaning-font"></td><td></td></tr>
                             <tr><td class="hanzi-font">休牟 休牟 休牟</td><td class="poj-font">Hiu-bô͘ (x3)</td><td class="sanskrit-font">SHURU SHURU SHURU</td><td class="iast-font">śuru</td><td class="meaning-font"></td><td></td></tr>
                             <tr><td class="hanzi-font">休摩 休咩提</td><td class="poj-font">Hiu-mô Hiu-me-tê</td><td class="sanskrit-font">SHUMA SHUMIDI</td><td class="iast-font">śumā śumidi</td><td class="meaning-font"></td><td></td></tr>
-                            <tr><td class="hanzi-font">阿提 迦羅 咩兜</td><td class="poj-font">A-tê Ka-lô Me-tau</td><td class="sanskrit-font">ADIKARAMIDU</td><td class="iast-font">adikārame tu</td><td class="meaning-font">權力 (Adhikara)</td><td><span class="tag tag-tang">Tau</span> 兜=Tu。</td></tr>
+                            <tr><td class="hanzi-font">阿提 迦羅 咩兜</td><td class="poj-font">A-tê Ka-lô Me-tau</td><td class="sanskrit-font">ADIKARAMIDU</td><td class="iast-font">adikārame tu</td><td class="meaning-font">權力 (Adhikara)</td><td><span class="tag tag-note">Tau</span> 兜=Tu。</td></tr>
                             <tr><td class="hanzi-font">莎訶</td><td class="poj-font">So-ho</td><td class="sanskrit-font">SVAHA</td><td class="iast-font">svāhā</td><td class="meaning-font">成就</td><td></td></tr>
                         </tbody>
                     </table>
